<?xml version="1.0"?>
<package format="2">
  <name>NRS_Gen_Filter</name>
  <version>0.0.0</version>
  <description>The NRS_Gen_Filter package</description>

  <maintainer email="wodbs02221@gmail.com">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
